# dropbear_urdf

./: .gitattributes  README.md
dropbear_granular_urdf/: CMakeLists.txt  package.xml
dropbear_granular_urdf/launch/: display.launch.py  gazebo.launch.py
dropbear_granular_urdf/meshes/head/: 00_top_lvl_p3737_01142022_1.stl  245-82972-0000-000_asm_07192018_B_1.stl  Intel_RealSense_D455_CAD_external_1.stl
dropbear_granular_urdf/rviz/: dropbear_granular_rviz.rviz
dropbear_granular_urdf/urdf/: arm.xacro  arm_.xacro  battery.xacro  dropbear.urdf  dropbear_copy.urdf  dropbear_granular.urdf.xacro  head.xacro  leg.xacro  materials.xacro  pelvic_girdle.xacro  torso.xacro
dropbear_granular_urdf/urdf/ros2_control/: hyperspawn_dropbear.ros2_control.xacro
dropbear_modular_urdf/: CMakeLists.txt  package.xml
dropbear_modular_urdf/launch/: display.launch.py
dropbear_modular_urdf/meshes/head/: 10mm-ujoint-base_1.stl  10mm-ujoint-base__1__1.stl  10mm-ujoint-base__2__1.stl  10mm-ujoint-base__3__1.stl  10mm-ujoint-base__4__1.stl  10mm-ujoint-base__5__1.stl  5mm-ujoint-base_1.stl  5mm-ujoint-base__1__1.stl  5mm-ujoint-base__2__1.stl  5mm-ujoint-base__3__1.stl  5mm-ujoint-base__4__1.stl  5mm-ujoint-base__5__1.stl  base_link.stl  dum1_1.stl  dum1__1__1.stl  dum2_1.stl  dum2__1__1.stl  dum3_1.stl  dum3__1__1.stl  dum4_1.stl  dum4__1__1.stl  dum5_1.stl  dum5__1__1.stl  leadscrew__0__1.stl  leadscrew__1___1__1.stl  leadscrew__2___1__1.stl  (+21 more)
dropbear_modular_urdf/urdf/: arm.xacro  dropbear.urdf  dropbear_modular.urdf.xacro  head.xacro  leg.xacro  torso.xacro  waist.xacro
(+31 files in other folders)
